--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,5 +4,8 @@ orbs:
 workflows:
   build:
     jobs:
+      - cypress/install
       - cypress/run:
-          store_artifacts: true
+          requires: -cypress/install
+          parallel: true
+          parallelism: 1
