--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ workflows:
     jobs:
       - cypress/install
       - cypress/run:
-          requires: -cypress/install
+          requires: 
+            -cypress/install
           parallel: true
           parallelism: 1
